# llamacpp_embed

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  deploy-lin.sh  deploy-win.bat
src/: lib.rs  llama.rs  main.rs
