[package]
name = "llamacpp_embed"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
zip = "4.3.0"
